force-app/main/default/objects/TechnicalOffer__c/TechnicalOffer__c.object-meta.xml
<CustomObject>
    <description>Oggetto di configurazione per lafunzionalità di configurazione offerta tecnica</description>
    <label>Offerta Tecnica</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Technical Offer</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>