force-app/main/default/objects/TechnicalOffer__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <description>Indica la percentuale di sconto (BRIM)</description>
    <label>Sconto</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>