force-app/main/default/objects/TechnicalOffer__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <description>Campo di configurazione che indica la data di fine validità.</description>
    <label>Data Fine Validità</label>
    <type>Date</type>
</CustomField>