force-app/main/default/objects/TechnicalOffer__c/fields/Hours__c.field-meta.xml
<CustomField>
    <fullName>Hours__c</fullName>
    <description>Indica il numero di ore da scontare (BRIM)</description>
    <label>Ore</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>