force-app/main/default/objects/TechnicalOffer__c/fields/I0__c.field-meta.xml
<CustomField>
    <fullName>I0__c</fullName>
    <description>Indica il parametro I0 (BRIM)</description>
    <label>I0</label>
    <precision>8</precision>
    <scale>7</scale>
    <type>Currency</type>
</CustomField>