force-app/main/default/objects/TechnicalOffer__c/fields/Index__c.field-meta.xml
<CustomField>
    <fullName>Index__c</fullName>
    <label>Indice</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PUN_24</fullName>
            </value>
            <value>
                <fullName>PUN_123</fullName>
            </value>
            <value>
                <fullName>PUN_SL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>