force-app/main/default/objects/TechnicalOffer__c/fields/NameExternalId__c.field-meta.xml
<CustomField>
    <fullName>NameExternalId__c</fullName>
    <description>Campo di configurazione che indica il nome dell&apos;offerta tecnica come external id.</description>
    <externalId>true</externalId>
    <label>Offer Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>