force-app/main/default/objects/TechnicalOffer__c/fields/NumberTimeExtension__c.field-meta.xml
<CustomField>
    <fullName>NumberTimeExtension__c</fullName>
    <description>Campo di configurazione che indica il numero di unità di tempo per la proroga.</description>
    <label>Numero unità di tempo per proroga</label>
    <length>3</length>
    <type>Text</type>
</CustomField>