force-app/main/default/objects/TechnicalOffer__c/fields/OfferCode__c.field-meta.xml
<CustomField>
    <fullName>OfferCode__c</fullName>
    <description>Campo di configurazione usato per indicare id dell&apos;offerta clonata</description>
    <label>Offerta clonata da</label>
    <length>255</length>
    <type>Text</type>
</CustomField>