force-app/main/default/objects/TechnicalOffer__c/fields/P0__c.field-meta.xml
<CustomField>
    <fullName>P0__c</fullName>
    <description>Indica il parametro P0 (BRIM)</description>
    <label>P0</label>
    <precision>8</precision>
    <scale>7</scale>
    <type>Currency</type>
</CustomField>