force-app/main/default/objects/TechnicalOffer__c/fields/ProcessType__c.field-meta.xml
<CustomField>
    <fullName>ProcessType__c</fullName>
    <description>Campo di configurazione che indica il tipo processo.</description>
    <label>Tipo processo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Switching attivo</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Subentro attivo</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Switching passivo</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Subentro passivo</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Switching venditore terzo</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Subentro venditore terzo</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Passaggio mercato libero</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>