force-app/main/default/objects/TechnicalOffer__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo di configurazione usato per indicare il prodotto del rdato ecord di tale oggetto legato alla funzionalità dei Criteri di Eleggiblità</description>
    <label>Prodotto</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Product2.CategoryFamily__c</field>
            <operation>equals</operation>
            <value>Offerta Commerciale</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Technical Offer</relationshipLabel>
    <relationshipName>Technical_Offer</relationshipName>
    <type>Lookup</type>
</CustomField>