force-app/main/default/objects/TechnicalOffer__c/fields/ProductIdentifier__c.field-meta.xml
<CustomField>
    <fullName>ProductIdentifier__c</fullName>
    <description>Indica l&apos;identificativo del prodotto (BRIM)</description>
    <label>Identificativo prodotto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BAND_DISCOUNT</fullName>
            </value>
            <value>
                <fullName>SPECIAL_DAY</fullName>
            </value>
            <value>
                <fullName>PUN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>