force-app/main/default/objects/TechnicalOffer__c/fields/RateCategory__c.field-meta.xml
<CustomField>
    <fullName>RateCategory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rate Category</label>
    <referenceTo>RateTemplate__c</referenceTo>
    <relationshipLabel>Technical Offers</relationshipLabel>
    <relationshipName>TechnicalOffers</relationshipName>
    <type>Lookup</type>
</CustomField>