force-app/main/default/objects/TechnicalOffer__c/fields/SapCode__c.field-meta.xml
<CustomField>
    <fullName>SapCode__c</fullName>
    <description>Campo di configurazione che indica il codice sap.</description>
    <label>Codice SAP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>