force-app/main/default/objects/TechnicalOffer__c/fields/ServiceProduct__c.field-meta.xml
<CustomField>
    <fullName>ServiceProduct__c</fullName>
    <label>Prodotto di servizio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GAS_SB_A_SCONTI</fullName>
            </value>
            <value>
                <fullName>ELE_PREZZO</fullName>
            </value>
            <value>
                <fullName>GAS_BUSINESS</fullName>
            </value>
            <value>
                <fullName>ELE_DOMES</fullName>
            </value>
            <value>
                <fullName>ELE_ND_30KW</fullName>
            </value>
            <value>
                <fullName>ELE_ND_POTMASS</fullName>
            </value>
            <value>
                <fullName>GAS_DIFFUSI</fullName>
            </value>
            <value>
                <fullName>GAS_MULTISITO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>