force-app/main/default/objects/TechnicalOffer__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <description>Campo di configurazione che indica la data di inizio validità.</description>
    <label>Data Inizio Validità</label>
    <type>Date</type>
</CustomField>