force-app/main/default/objects/TechnicalOffer__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Campo di configurazione che indica lo stato dell&apos;offerta tecnica.</description>
    <label>Stato</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Status OK</fullName>
            </value>
            <value>
                <fullName>Status KO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>