force-app/main/default/objects/TechnicalOffer__c/fields/StepAllowed__c.field-meta.xml
<CustomField>
    <fullName>StepAllowed__c</fullName>
    <description>Campo di configurazione che indica il passo ammesso.</description>
    <label>Passo ammesso</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>S</fullName>
                <label>Sì modificabile</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>No modificabile</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>