force-app/main/default/objects/TechnicalOffer__c/fields/Template__c.field-meta.xml
<CustomField>
    <fullName>Template__c</fullName>
    <description>Recupera il rate template</description>
    <formula>RateCategory__r.ContractTemplate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Template</label>
    <type>Text</type>
</CustomField>