force-app/main/default/objects/TechnicalOffer__c/fields/UnitTimeExtension__c.field-meta.xml
<CustomField>
    <fullName>UnitTimeExtension__c</fullName>
    <description>Campo di configurazione che indica l&apos;unità di tempo per la proroga</description>
    <label>Unità di tempo per proroga</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3</fullName>
                <label>Settimane</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Anni</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Mesi</label>
            </value>
            <value>
                <fullName>0</fullName>
                <label>Giorni</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>