force-app/main/default/objects/TechnicalOffer__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <formula>Product__r.Version__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Versione</label>
    <type>Text</type>
</CustomField>